--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body{
 
 }
 .search-input {
-  width: 100%;
+  width: 1400px;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -20,7 +20,7 @@ body{
 }
 
 .crypto-table {
-  width: 100%;
+  width: 1400px;
   border-collapse: collapse;
 }
 
